# PVZ_PlantEditMod

./: .gitignore  README.md  copilot的改造指导.md  main.py  problems.md  run.sh
FunctionPlotter/: README.md  main.py
PlantsVSZombies_pyqt6/: .gitignore  README.md  build_cpp_plants.py  custom_plant_store.py  game_scene.py  image_composer.py  main.py  main_window.py  menu.py  plant_editor.py  plant_library.py  seed.py  sun.py  syntax_highlighter.py  ui_helpers.py  zombies.py
PlantsVSZombies_pyqt6/cpp_api/: pvz_api.h
PlantsVSZombies_pyqt6/cpp_core/: components.cpp.bak  components.h  hybrid_plant.cpp.bak  hybrid_plant.h
PlantsVSZombies_pyqt6/cpp_plants/: CMakeLists.txt  DoubleSunShooter.cpp  MinePea.cpp  PeaNut.cpp  Peashooter.cpp  PotatoMine.cpp  Repeater.cpp  SunFlower.cpp  SunFortress.cpp  SunNut.cpp  WallNut.cpp
PlantsVSZombies_pyqt6/docs/: CPP_PLANT_API.md
PlantsVSZombies_pyqt6/plants/: __init__.py  cpp_bridge.py
PlantsVSZombies_pyqt6/user_plants/: MyHybridPlant.cpp  TankFlower.cpp  selected_plants.json
PlantsVSZombies_pyqt6/user_plants/drafts/: mode_a_plant.cpp  mode_b_components.h  mode_b_plant.cpp
